--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -1,16 +1,14 @@
-
-
 <div class="card primary-text-color">
     <div class="card-content dark-primary-color">
         <span class="activator card-title" ng-if="indicator==='goalScored'"> 
             <i class="fa fa-futbol-o left"></i>
-            <small>{{'dashboard.widgetTopScored.title' | translate}}</small>
+            <small translate="dashboard.widgetTopScored.title"></small>
             <i class=" material-icons right">more_vert</i>
         </span>
-        
+
         <span class="activator card-title" ng-if="indicator==='playTime'">
             <i class="fa fa-clock-o left"></i>
-            <small>{{'dashboard.widgetTopUsed.title' | translate}}</small>
+            <small translate="dashboard.widgetTopUsed.title"></small>
             <i class=" material-icons right">more_vert</i>
         </span>
 
@@ -39,9 +37,10 @@
                                            background-size: 80% 100%;
                                            background-position: center;">
                     <br>
-                    <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'80px'" class="hide-on-small-only"></simple-avatar>
+                    <simple-avatar person="players[0]" link="('#/private/viewPlayer/' + players[0]._id)" width="'80px'"
+                                   class="hide-on-small-only"></simple-avatar>
                     <br> {{players[0].firstname}}
-                    <br> 
+                    <br>
                     <h5 class="hide-on-med-and-up">&nbsp;</h5>
                     <h4 class="white-text" ng-if="indicator==='playTime'">{{players[0].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[0].value}} </h4>
@@ -51,7 +50,8 @@
                                            background-size: 80% 100%;
                                            background-position: center;">
                     <br>
-                    <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'80px'" class="hide-on-small-only"></simple-avatar> 
+                    <simple-avatar person="players[1]" link="('#/private/viewPlayer/' + players[1]._id)" width="'80px'"
+                                   class="hide-on-small-only"></simple-avatar>
                     <br> {{players[1].firstname}}
                     <br>
                     <h5 class="hide-on-med-and-up">&nbsp;</h5>
@@ -64,17 +64,18 @@
                                            background-size: 80% 100%;
                                            background-position: center;">
                     <br>
-                    <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'80px'" class="hide-on-small-only"></simple-avatar>
+                    <simple-avatar person="players[2]" link="('#/private/viewPlayer/' + players[2]._id)" width="'80px'"
+                                   class="hide-on-small-only"></simple-avatar>
                     <br> {{players[2].firstname}}
-                    <br> 
+                    <br>
                     <h5 class="hide-on-med-and-up">&nbsp;</h5>
                     <h4 class="white-text" ng-if="indicator==='playTime'">{{players[2].value/60 | number : 0}} '</h4>
                     <h4 class="white-text" ng-if="indicator==='goalScored'">{{players[2].value}}</h4>
                 </div>
             </div>
         </div>
-        <div class="center-align" ng-hide="noStat">{{'stats.resumeTab.noData' | translate }}</div>
-    
+        <div class="center-align" ng-hide="noStat" translate="stats.resumeTab.noData"></div>
+
     </div>
 
     <div class="card-reveal">
@@ -83,25 +84,18 @@
             {{'dashboard.widgetTopScored.title' | translate}} 
             <i class=" material-icons right">more_vert</i>
         </span>
-        
+
         <span class="card-title" ng-if="indicator==='playTime'"> 
             <i class="fa fa-clock-o left"></i>
             {{'dashboard.widgetTopUsed.title' | translate}} 
             <i class=" material-icons right">more_vert</i>
         </span>
         <table>
-            <thead>
-            <tr>
-                <th data-field="indicators"></th>
-                <th ng-repeat="p in series track by $index" data-field="{{p}}" class="center-align" ng-bind="p"></th>
-            </tr>
-            </thead>
             <tbody>
-            <tr ng-repeat="l in labels track by $index">
-                <td><b ng-bind="l"></b></td>
-                <td ng-repeat="d in data track by $index" data-field="{{d[$parent.$index]}}" class="center-align">
-                    {{d[$parent.$index]}}
-                </td>
+            <tr ng-repeat="player in players track by $index">
+                <td><b>{{player.firstname}} {{player.name}}</b></td>
+                <td class="center-align" ng-bind="player.value" ng-if="indicator==='goalScored'"></td>
+                <td class="center-align" ng-if="indicator==='playTime'">{{player.value/60 | number : 0}} '</td>
             </tr>
             </tbody>
         </table>
