amélioration du widget Podium

--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -3,13 +3,13 @@
         <span class="activator card-title" ng-if="indicator==='goalScored'"> 
             <i class="fa fa-futbol-o left"></i>
             <small translate="dashboard.widgetTopScored.title"></small>
-            <i class=" material-icons right">more_vert</i>
+            <i class="material-icons right">more_vert</i>
         </span>
 
         <span class="activator card-title" ng-if="indicator==='playTime'">
             <i class="fa fa-clock-o left"></i>
             <small translate="dashboard.widgetTopUsed.title"></small>
-            <i class=" material-icons right">more_vert</i>
+            <i class="material-icons right">more_vert</i>
         </span>
 
     </div>
@@ -82,13 +82,13 @@
         <span class="card-title" ng-if="indicator==='goalScored'"> 
             <i class="fa fa-futbol-o left"></i>
             {{'dashboard.widgetTopScored.title' | translate}} 
-            <i class=" material-icons right">more_vert</i>
+            <i class="material-icons right">close</i>
         </span>
 
         <span class="card-title" ng-if="indicator==='playTime'"> 
             <i class="fa fa-clock-o left"></i>
             {{'dashboard.widgetTopUsed.title' | translate}} 
-            <i class=" material-icons right">more_vert</i>
+            <i class="material-icons right">close</i>
         </span>
         <table>
             <tbody>
