QHBWEB-101 : Stats - Graphes plantés

--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -93,6 +93,7 @@
         <table>
             <tbody>
             <tr ng-repeat="player in players track by $index">
+                <td ng-bind="$index"></td>
                 <td><b>{{player.firstname}} {{player.name}}</b></td>
                 <td class="center-align" ng-bind="player.value" ng-if="indicator==='goalScored'"></td>
                 <td class="center-align" ng-if="indicator==='playTime'">{{player.value/60 | number : 0}} '</td>
