--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -17,8 +17,9 @@
         <div class="card-content" style="height:48px;">&nbsp; {{event.participants.teamHome.label}} <br/> &nbsp;
             {{event.participants.teamVisitor.label}}
         </div>
-        <div class="card-content light-text-color">&nbsp; <small>{{event.startDate}}</small>
-            <a ng-show="mapShow" class="waves-effect waves-light accent-text-color right" ng-click="openMap()">
+        <div class="card-content light-text-color">&nbsp;
+            <small>{{event.startDate}}</small>
+            <a ng-if="mapShow" class="waves-effect waves-light accent-text-color right" ng-click="openMap()">
                 <i class="material-icons">location_on</i>
             </a>
             <span ng-if="hasCompare" ng-show="isCollected" class="right">&nbsp;
@@ -27,14 +28,12 @@
                        ng-checked="compareList[event._id]" id="compare-{{event._id}}"/>
                 <label for="compare-{{event._id}}"></label>
             </span>
-            
+
         </div>
     </div>
 </div>
-
-
 <!-- Modal map Player -->
-<div ng-attr-id="modalEvent-{{event._id}}" class="modal modal-fixed-footer">
+<div id="modalEvent-{{event._id}}" class="modal modal-fixed-footer">
     <div class="modal-content">
         <div class="primary-text-color"><i class="material-icons">location_on</i>
             {{event.address.formatedAddress}}
@@ -43,7 +42,7 @@
         <div ng-attr-id="mapEvent-{{event._id}}" style="width:100%;height:90%;"></div>
     </div>
     <div class="modal-footer center-align">
-        <a href="" class="modal-action modal-close waves-effect waves-light btn accent-color"
-           translate="commons.buttons.close"></a>
+        <button class="modal-action modal-close waves-effect waves-light btn accent-color"
+           translate="commons.buttons.close"></button>
     </div>
 </div>
