--- a/src/app/modules/sandbox/effective/team/compare.html
+++ b/src/app/modules/sandbox/effective/team/compare.html
@@ -45,32 +45,28 @@
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
                                 owners="teamsIds" series="series"
-                                start-date="periodicityActive.startDate" meta="meta"
-                                end-date="periodicityActive.endDate"
+                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
                                 owners="teamsIds" series="series"
-                                start-date="periodicityActive.startDate" meta="meta"
-                                end-date="periodicityActive.endDate"
+                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
                                 owners="teamsIds" series="series"
-                                start-date="periodicityActive.startDate" meta="meta"
-                                end-date="periodicityActive.endDate"
+                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
                     </div>
                     <div class="col s12 m6">
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
                                 owners="teamsIds" series="series"
-                                start-date="periodicityActive.startDate" meta="meta"
-                                end-date="periodicityActive.endDate"
+                                periodicity-active="periodicityActive" meta="meta"
                                 indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                     </div>
                 </div>
